[gd_scene load_steps=4 format=3 uid="uid://dlxbppiim5m5d"]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_hud_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_health"]
bg_color = Color(0.8, 0.2, 0.2, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gold"]
bg_color = Color(0.2, 0.5, 0.8, 1)

[node name="HUD" type="CanvasLayer" groups=["hud"]]
script = ExtResource("1_hud_script")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -4.0
offset_right = 1.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="HealthContainer" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 50.0

[node name="HealthLabel" type="Label" parent="Control/HealthContainer"]
layout_mode = 2
text = "Health: 100"

[node name="HealthProgressBar" type="ProgressBar" parent="Control"]
layout_mode = 0
offset_left = 20.0
offset_top = 40.0
offset_right = 320.0
offset_bottom = 60.0
theme_override_styles/fill = SubResource("StyleBoxFlat_health")
show_percentage = false

[node name="ScoreLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 20.0
offset_top = 60.0
offset_right = 120.0
offset_bottom = 85.0
text = "Score: 0"

[node name="HighScoreLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 20.0
offset_top = 80.0
offset_right = 200.0
offset_bottom = 105.0
text = "High Score: 0"

[node name="GoldLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 20.0
offset_top = 120.0
offset_right = 120.0
offset_bottom = 145.0
text = "Gold: 0"

[node name="GoldProgressBar" type="ProgressBar" parent="Control"]
layout_mode = 0
offset_left = 20.0
offset_top = 145.0
offset_right = 320.0
offset_bottom = 165.0
theme_override_styles/fill = SubResource("StyleBoxFlat_gold")
show_percentage = false

[node name="GemLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 20.0
offset_top = 175.0
offset_right = 120.0
offset_bottom = 200.0
text = "Gems: 0"
